force-app/main/default/objects/CoolSculpting__c/CoolSculpting__c.object-meta.xml
<CustomObject>
    <label>CoolSculpting</label>
    <nameField>
        <label>CoolSculpting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoolSculptings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>