force-app/main/default/objects/CoolSculpting__c/fields/CoolSculpting_Location__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Location__c</fullName>
    <label>CoolSculpting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>