force-app/main/default/objects/CoolSculpting__c/fields/CoolSculpting_No_Treatment_s__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_No_Treatment_s__c</fullName>
    <label>CoolSculpting No. Treatment(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>