force-app/main/default/objects/CoolSculpting__c/fields/CoolSculpting_Problem__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Problem__c</fullName>
    <label>CoolSculpting Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>