force-app/main/default/objects/CoolSculpting__c/fields/CoolSculpting_Stamped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Stamped_Quantity__c</fullName>
    <label>CoolSculpting Stamped Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>