force-app/main/default/objects/CoolSculpting__c/fields/CoolSculpting_Type__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Type__c</fullName>
    <label>CoolSculpting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>