force-app/main/default/objects/CoolSculpting__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Cool Sculpting Weight Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>