force-app/main/default/objects/CoolSculpting__c/fields/Target_Comments__c.field-meta.xml
<CustomField>
    <fullName>Target_Comments__c</fullName>
    <label>Target Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>