force-app/main/default/objects/CoolSculpting__c/fields/Target_Savings__c.field-meta.xml
<CustomField>
    <fullName>Target_Savings__c</fullName>
    <label>Target Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>