force-app/main/default/objects/CoolSculpting__c/fields/Target_Transform_Comments__c.field-meta.xml
<CustomField>
    <fullName>Target_Transform_Comments__c</fullName>
    <label>Target &amp; Transform Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>