force-app/main/default/objects/CoolSculpting__c/fields/Total_Transformation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Total_Transformation_Comments__c</fullName>
    <label>Total Transformation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>