force-app/main/default/objects/CoolSculpting__c/fields/Total_Transformation_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Transformation_Savings__c</fullName>
    <label>Total Transformation Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>